RbA Build/src/objects/Back_Office_Checklist_Configuration__c.object
<CustomObject>
    <description>Used for tracking important signed documents</description>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lien_Rights_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lien Rights Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Preparation_Expectations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Preparation Expectations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renovate_Right_Booklet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renovate Right Booklet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rights_of_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rights of Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Supplement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Supplement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Configuration__c</fullName>
        <label>Store Configuration</label>
        <referenceTo>Store_Configuration__c</referenceTo>
        <relationshipName>Back_Office_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id,&quot;View&quot;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Back Office Checklist Configuration</label>
    <nameField>
        <displayFormat>BOC# - {00}</displayFormat>
        <label>Back Office Checklist Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Back Office Checklist Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>